@@ -46,6 +46,8 @@ TODO_CODECS_BASIC_TABLE+=inter/TO_ALIAS
 TODO_CODECS_BASIC_TABLE+=inter/UNIX
 TODO_CODECS_BASIC_TABLE+=inter/UPPER
 TODO_CODECS_BASIC_TABLE+=inter/UPSIDEDOWN
+TODO_CODECS_BASIC_TABLE+=inter/WHITESPACE-DERAIL
+TODO_CODECS_BASIC_TABLE+=inter/WHITESPACE-RERAIL
 TODO_CODECS_BASIC_TABLE+=inter/WIDTH
 TODO_CODECS_BASIC_TABLE+=inter/WIN
 TODO_CODECS_BASIC_TABLE+=inter/ZHCN
@@ -121,6 +123,8 @@ TODO_CODECS_BASIC_CALLBACK+=inter/AMBIGUOUS-UNPAD
 TODO_CODECS_BASIC_CALLBACK+=inter/BIG5-DEFRAG
 TODO_CODECS_BASIC_CALLBACK+=inter/SCORE
 TODO_CODECS_BASIC_CALLBACK+=inter/SCORE_TRAIN
+TODO_CODECS_BASIC_CALLBACK+=inter/WHITESPACE-DERAIL
+TODO_CODECS_BASIC_CALLBACK+=inter/WHITESPACE-RERAIL
 TODO_CODECS_BASIC_CALLBACK+=inter/WIDTH
 TODO_CODECS_BASIC_CALLBACK+=to/3F
 TODO_CODECS_BASIC_CALLBACK+=to/ANSI-CONTROL
